--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -31,7 +31,7 @@
           <div class="form-group" show-errors="{showSuccess: true}">
             <label>Määräraha vuosi {{vuosi}}</label>
 
-            <input id="maararaha" name="maararaha" type="text" min="-0.0001" ng-currency="" numeric-only=""
+            <input id="maararaha" name="maararaha" type="text" numeric-only unit="€"
                    class="form-control"
                    ng-focus="asetaVanhaArvo(maararaha)"
                    ng-model-options="{ allowInvalid: true }"
@@ -49,7 +49,7 @@
         <div class="col-md-4">
           <div class="form-group" show-errors="{showSuccess: true}">
             <label>Siirtomääräraha vuodelta {{vuosi-1}}</label>
-            <input id="ylijaama" name="ylijaama" type="text" min="-0.0001" ng-currency="" numeric-only=""
+            <input id="ylijaama" name="ylijaama" type="text" numeric-only unit="€"
                    class="form-control"
                    ng-focus="asetaVanhaArvo(ylijaama)"
                    ng-model-options="{ allowInvalid: true }"
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-4">
           <label>YHTEENSÄ</label>
-          <input type="text" min="-0.0001" ng-currency="" class="form-control"
+          <input type="text" numeric-only unit="€" class="form-control"
                  ng-model="jaettavaraha" ng-class="{'varoitusvari':myonnettyLiikaa()}" disabled/>
         </div>
       </juku-form-row>
@@ -110,8 +110,7 @@
                    class="form-group"
                    show-errors="{showSuccess: true}">
                 <input id="avustus_{{hakemus.hakemusId}}" name="avustus_{{hakemus.hakemusId}}" type="text"
-                       min="-0.0001"
-                       ng-currency="" numeric-only="" class="form-control"
+                       numeric-only unit="€" class="form-control"
                        ng-model="hakemus.myonnettavaAvustus"
                        ng-model-options="{ allowInvalid: true }"
                        ui-validate="{sallittuAvustus: 'sallittuAvustus(hakemus.myonnettavaAvustus,hakemus.haettuAvustus, hakemus.hakemuksenTila)'}"
