--- a/app/scripts/components/tunnusluvut/lipputulot/index.html
+++ b/app/scripts/components/tunnusluvut/lipputulot/index.html
@@ -35,8 +35,8 @@
             <td ng-if="tyyppi==='BR' || tyyppi==='KOS'">
               <form-group-compact label="Kertalippu" errormessage="lipputuloErrorMessage">
                 <input id="{{tyyppi + '-kertalippu-'+$index}}" name="kertalippu" type="text"
-                       numeric-only="" ng-currency="" max="9999999999.99"
-                       currency-symbol="€" noenter placeholder="Kertalippu (€)"
+                       numeric-only unit="€" max="9999999999.99"
+                       noenter placeholder="Kertalippu (€)"
                        select-on-click
                        ng-model="rivi.kertalipputulo">
               </form-group-compact>
@@ -44,8 +44,8 @@
             <td ng-if="tyyppi==='BR' || tyyppi==='KOS'">
               <form-group-compact label="Arvolippu" errormessage="lipputuloErrorMessage">
                 <input id="{{tyyppi + '-arvolippu-'+$index}}" name="arvolippu" type="text"
-                       numeric-only="" ng-currency="" max="9999999999.99"
-                       currency-symbol="€" noenter placeholder="Arvolippu (€)"
+                       numeric-only unit="€" max="9999999999.99"
+                       noenter placeholder="Arvolippu (€)"
                        select-on-click
                        ng-model="rivi.arvolipputulo">
               </form-group-compact>
@@ -53,8 +53,8 @@
             <td ng-if="tyyppi==='BR' || tyyppi==='KOS'">
               <form-group-compact label="Kausilippu" errormessage="lipputuloErrorMessage">
                 <input id="{{tyyppi + '-kausilippu-'+$index}}" name="kausilippu" type="text"
-                       numeric-only="" ng-currency="" max="9999999999.99"
-                       currency-symbol="€" noenter placeholder="Kausilippu (€)"
+                       numeric-only unit="€" max="9999999999.99"
+                       noenter placeholder="Kausilippu (€)"
                        select-on-click
                        ng-model="rivi.kausilipputulo">
               </form-group-compact>
@@ -62,8 +62,8 @@
             <td ng-if="tyyppi==='SA'">
               <form-group-compact label="Lipputulo" errormessage="lipputuloErrorMessage">
                 <input id="{{tyyppi + '-lipputulo-sl'+$index}}" name="lipputulo" type="text"
-                       numeric-only="" ng-currency="" max="9999999999.99"
-                       currency-symbol="€" noenter placeholder="Lipputulo (€)"
+                       numeric-only unit="€" max="9999999999.99"
+                       noenter placeholder="Lipputulo (€)"
                        select-on-click
                        ng-model="rivi.lipputulo">
               </form-group-compact>
