--- a/app/scripts/views/yhteinen/asiakastuki.html
+++ b/app/scripts/views/yhteinen/asiakastuki.html
@@ -7,12 +7,7 @@
     <div class="col-md-4">
       <label>Sähköposti</label>
 
-      <p><a href="mailto:liikennevirasto.asiakastuki@cgi.com" target="_top">liikennevirasto.asiakastuki@cgi.com</a></p>
-    </div>
-    <div class="col-md-4">
-      <label>Puhelinnumero</label>
-
-      <p>010 302 1941 (arkisin 8-17)</p>
+      <p><a href="mailto:jarjestelmatuki@traficom.fi" target="_top">jarjestelmatuki@traficom.fi</a></p>
     </div>
   </div>
 </div>
